# bootcamp_lv_python_aula18

./: README.md  ex00.py  pyproject.toml
